--- a/templates/test_home.html
+++ b/templates/test_home.html
@@ -1,7 +1,7 @@
 This is the test home page!
 
 
-<form action="/" method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data">
   <input type="file" name="messages">
-  <input type="submit" value="Upload">
+  <input type="submit">
 </form>
