--- a/templates/test_results.html
+++ b/templates/test_results.html
@@ -6,4 +6,8 @@ This is the test results page!
 {{ messages_content }}
 
 </br>
-.......
+<a href="/">
+ <button class="btn btn-default action" style="background-color: rgb(174, 117, 11); border-radius: 0">
+ Again!
+ </button>
+</a>
