--- a/templates/new_results.html
+++ b/templates/new_results.html
@@ -243,11 +243,6 @@ thead {
 					<h4>{{poop_count_message}}</h4>
 					<div class="block"></div>
 				</div>
-<!-- 				<div class="reportblock">
-					<h1 class="orange">32%</h1>
-					<h3>Some witty line.</h3>
-					<h4 class="lgrey">You send blah blah</h4>
-				</div> -->
 			<div class="sectionblock section larry">
 					<h2 class="white double">Sentiment Analysis</h2>
 			</div>
@@ -268,18 +263,18 @@ thead {
 						<tbody>
 						<tr>
 							<td>I WANT</td>
-							<td>{{i_want}}1</td>
-							<td>{{they_want}}1</td>
+							<td>{{i_want}}</td>
+							<td>{{they_want}}</td>
 						</tr>
 						<tr>
 							<td>I NEED</td>
-							<td>{{i_need}}1</td>
-							<td>{{they_need}}1</td>
+							<td>{{i_need}}</td>
+							<td>{{they_need}}</td>
 						</tr>
 						<tr>
 							<td>COULD YOU</td>
-							<td>{{i_could}}1</td>
-							<td>{{they_could}}1</td>
+							<td>{{i_could}}</td>
+							<td>{{they_could}}</td>
 						</tr>	
 					</tbody>
 					</table>
@@ -298,57 +293,29 @@ thead {
 						<tbody>
 						<tr>
 							<td>Sorry</td>
-							<td>{{ i_sorry }}1</td>
-							<td>{{they_sorry}}1</td>
+							<td>{{ i_sorry }}</td>
+							<td>{{they_sorry}}</td>
 						</tr>
 						<tr>
 							<td>No Problem</td>
-							<td>{{i_problem}}1</td>
-							<td>{{they_problem}}1</td>
+							<td>{{i_problem}}</td>
+							<td>{{they_problem}}</td>
 						</tr>
 						<tr>
 							<td>My Bad</td>
-							<td>{{i_bad}}1</td>
-							<td>{{they_bad}}1</td>
+							<td>{{i_bad}}</td>
+							<td>{{they_bad}}</td>
 						</tr>	
 					</tbody>
 					</table>
 				</div>
-			<div class="sectionblock section rage">
-					<h2 class="white single">Rage</h2>
-			</div>
-				<div class="reportblock">
-					<table class="meth-table">
-						<thead>
-							<th>CONTEXT</th>
-							<th>YOU</th>
-							<th>THEM</th>
-						</thead>
-						<tbody>
-						<tr>
-							<td>Swear words</td>
-							<td>{{ i_swear }}1</td>
-							<td>{{ they_swear }}1</td>
-						</tr>
-						<tr>
-							<td>No Problem</td>
-							<td>{{i_problem}}1</td>
-							<td>{{they_problem}}1</td>
-						</tr>
-						<tr>
-							<td>My Bad</td>
-							<td>{{i_bad}}1</td>
-							<td>{{they_bad}}1</td>
-						</tr>	
-					</tbody>
-					</table>
-				</div>
+
 			<div class="sectionblock section smart">
 					<h2 class="white single">Smart</h2>
 			</div>
 				<div class="reportblock">
-					<h3>We did a bunch of meth and science.</h3>
-					<h4 class="lgrey">The results will cover real things like</h4>
+					<h3>{{ smart_ration_message }}</h3>
+					<h4>{{ smart_count_message }}</h4>
 				</div>	
 			<div class="sectionblock section power">
 					<h2 class="white single">Power</h2>
