--- a/templates/new_results.html
+++ b/templates/new_results.html
@@ -263,18 +263,18 @@ thead {
 						<tbody>
 						<tr>
 							<td>I WANT</td>
-							<td>{{i_want}}</td>
-							<td>{{they_want}}</td>
+							<td>{{i_want.0}}</td>
+							<td>{{they_want.0}}</td>
 						</tr>
 						<tr>
 							<td>I NEED</td>
-							<td>{{i_need}}</td>
-							<td>{{they_need}}</td>
+							<td>{{i_need.0}}</td>
+							<td>{{they_need.0}}</td>
 						</tr>
 						<tr>
 							<td>COULD YOU</td>
-							<td>{{i_could}}</td>
-							<td>{{they_could}}</td>
+							<td>{{i_could.0}}</td>
+							<td>{{they_could.0}}</td>
 						</tr>	
 					</tbody>
 					</table>
@@ -314,15 +314,15 @@ thead {
 					<h2 class="white single">Smart</h2>
 			</div>
 				<div class="reportblock">
-					<h3>{{ smart_ration_message }}</h3>
+					<h3>{{ smart_ratio_message }}</h3>
 					<h4>{{ smart_count_message }}</h4>
 				</div>	
 			<div class="sectionblock section power">
 					<h2 class="white single">Power</h2>
 			</div>
 				<div class="reportblock">
-					<h3>We did a bunch of meth and science.</h3>
-					<h4 class="lgrey">The results will cover real things like</h4>
+					<h3>{{ power_ratio_message }}</h3>
+					<h4>{{ power_count_message }}</h4>
 				</div>
 			</div>	
 		</div>
