--- a/templates/new_results.html
+++ b/templates/new_results.html
@@ -1,9 +1,15 @@
+
+ <html>
+ <head>
+
+ <script src="//use.typekit.net/pxb4kaz.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
 <style>
 body {
     background-color: #333333;
-font-family: "futura-pt",sans-serif;
-font-style: normal;
-font-weight: 700;
+	font-family: "futura-pt",sans-serif;
+	font-style: normal;
+	font-weight: 700;
     letter-spacing: 5px;
 	text-transform: uppercase;
 	margin: auto;
@@ -45,7 +51,6 @@ background-color: #a4898c;
 
 .orange {
     color: #ff7200;
-      left: -59px;
   position: relative;
 }
 
@@ -233,7 +238,7 @@ thead {
 			</div>
 			<div class="report">
 				<div class="reportblock">
-					<h1 class="orange">{{ratio}}</h1>
+					<h1 class="orange" style="left: -88px">{{ratio}}</h1>
 					<h4 class="lgrey">{{ ratio_message }}</h4>
 					<div class="block"></div>
 				</div>
